Disable Tor's Transparent, HTTP and DNS ports by default

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,16 +92,16 @@
     <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
     <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
     <string name="pref_socks_title">Tor SOCKS</string>
-    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or auto for dynamic or 0 to disable)</string>
+    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on. Default: 9050 (0 to disable)</string>
     <string name="pref_socks_dialog">SOCKS Port Config</string>
     <string name="pref_http_title">Tor HTTP</string>
-    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on (default: 8118 or auto for dynamic or 0 to disable)</string>
+    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on. Default: 8118 (0 to disable)</string>
     <string name="pref_http_dialog">HTTP Port Config</string>
     <string name="pref_transport_title">Tor TransProxy Port</string>
-    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or auto for dynamic or 0 to disable)</string>
+    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on. Default: 9040 (0 to disable or auto for dynamic port assignment)</string>
     <string name="pref_transport_dialog">TransProxy Port Config</string>
     <string name="pref_dnsport_title">Tor DNS Port</string>
-    <string name="pref_dnsport_summary">Port that Tor offers its DNS on (default: 9053 or auto for dynamic or 0 to disable)</string>
+    <string name="pref_dnsport_summary">Port that Tor offers its DNS on. Default: 9053 (0 to disable or auto for dynamic port assignment)</string>
     <string name="pref_dnsport_dialog">DNS Port Config</string>
     <string name="pref_torrc_title">Torrc Custom Config</string>
     <string name="pref_torrc_summary">EXPERTS ONLY: enter direct torrc config lines</string>
